Fix embedded mongo db not working - I think

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-
+spring:
+  profiles: default, test, local
+  data:
+    mongodb:
+      host: localhost
+      port: 0
+      database:
+        'awards'
