--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.mockito:mockito-junit-jupiter:3.3.3'
 	testImplementation 'org.assertj:assertj-core:3.15.0'
+	testImplementation 'commons-io:commons-io:2.4'
 }
 
 test {
