--- a/src/main/frontend/awards-frontend/package.json
+++ b/src/main/frontend/awards-frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ngrx/effects": "^8.0.0",
+    "@ngrx/store": "^8.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.6.3",
     "tslib": "^1.14.1",
