--- a/src/main/frontend/awards-frontend/package.json
+++ b/src/main/frontend/awards-frontend/package.json
@@ -20,11 +20,11 @@
     "@angular/material": "11.0.0",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
+    "@angular/router": "^11.0.0",
     "@ngrx/effects": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "core-js": "^2.5.4",
-    "rxjs": "~6.6.3",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
