--- a/src/main/frontend/awards-frontend/package.json
+++ b/src/main/frontend/awards-frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^11.0.0",
     "@ngrx/effects": "^10.0.1",
     "@ngrx/store": "^10.0.1",
+    "@ngrx/store-devtools": "^10.0.1",
     "core-js": "^2.5.4",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
