--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -5,6 +5,13 @@ spring:
   application:
     name: api-gateway
 
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: front-end
+#          path: /**
+#          uri: http://localhost:4200
+
 # Uncomment to enable debug logging
 #logging:
 #  level:
