--- a/awards-service/Dockerfile
+++ b/awards-service/Dockerfile
@@ -10,4 +10,4 @@ COPY --from=build /build/libs/awards-service-0.0.1-SNAPSHOT.jar /usr/app/
 
 WORKDIR /usr/app
 
-ENTRYPOINT ["java", "-jar", "awards-service-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=docker", "awards-service-0.0.1-SNAPSHOT.jar"]
