--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -10,4 +10,4 @@ COPY --from=build /build/libs/api-gateway-0.0.1-SNAPSHOT.jar /usr/app/
 
 WORKDIR /usr/app
 
-ENTRYPOINT ["java", "-jar", "api-gateway-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=docker", "api-gateway-0.0.1-SNAPSHOT.jar"]
