--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 version: "3"
+
 services:
   awards-service:
     build: ./awards-service
-  awards-frontend:
-    build: ./awards-frontend
     ports:
-      - "4200:80"
+      - "5001:5001"
   api-gateway:
     build: ./api-gateway
     ports:
       - "5000:5000"
+  awards-frontend:
+    build: ./awards-frontend
+    ports:
+      - "4200:80"
