--- a/awards-frontend/Dockerfile
+++ b/awards-frontend/Dockerfile
@@ -4,11 +4,13 @@ WORKDIR usr/src/app
 
 COPY package.json package-lock.json ./
 
+RUN npm install
+
 COPY . .
 
-RUN npm run build
-
 RUN npm run lint
+
+RUN npm run build
 
 #RUN npm run test
 
