--- a/awards-frontend/nginx.conf
+++ b/awards-frontend/nginx.conf
@@ -7,7 +7,7 @@ http {
         root /usr/share/nginx/html;
         index index.html;
         location /api {
-            real_ip_header x-forwarded-for;
+            real_ip_header X-Forwarded-For;
             set_real_ip_from 0.0.0.0/0;
             proxy_pass http://api-gateway:5000/api;
         }
