--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ bin/
 ./awards-service/.gradle
 ./awards-service/out
 
+### Awards-Frontend ###
+./awards-frontend/node_modules
+
 ### STS ###
 .apt_generated
 .classpath
