--- a/awards-service/build.gradle
+++ b/awards-service/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-	compile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
